--- a/src/components/PersonalInformation/style.css
+++ b/src/components/PersonalInformation/style.css
@@ -1,5 +1,5 @@
 ::-webkit-input-placeholder {
-  text-align: right;
+  text-align: right !important;
 }
 
 .form-check-label {
@@ -9,8 +9,37 @@
 .btn-primary {
   background-color: #64C8C5 !important;
   margin-bottom: 30px;
+  margin-top: 30px;
 }
 
 .radio-inline {
   padding-right: 5px;
+}
+
+.no-margin {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+}
+
+.col-sm-3 {
+  width: 22% !important;
+  padding-right: 0px !important;
+}
+
+.col-sm-2 {
+  width: 14% !important;
+  padding-right: 0px !important;
+}
+
+@media screen and (max-width: 768px) {
+  .col-sm-3 {
+    width: 100% !important;
+  }
+  .col-sm-2 {
+    width: 100% !important;
+  }
+}
+
+.radio-inline {
+  display: inline !important;
 }
