--- a/src/components/Introduction/style.css
+++ b/src/components/Introduction/style.css
@@ -37,3 +37,27 @@ textarea::-webkit-input-placeholder {
 .form-row {
   float: left;
 }
+
+.loader {
+  border: 16px solid rgb(227, 247, 247);
+  /* Light grey */
+  border-top: 16px solid #3498db;
+  /* Blue */
+  border-radius: 50%;
+  width: 70px;
+  height: 70px;
+  animation: spin 2s linear infinite;
+  position: relative;
+  top: 25%;
+  left: 25%;
+  z-index: 2;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
